--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
   "name": "shri",
   "version": "0.0.0"
+  "version": "0.0.0",
+  "devDependencies": {
+    "gulp": "~3.8.10",
+    "gulp-autoprefixer": "~1.0.1"
+    "gulp-browserify": "~0.5.0",
+    "gulp-clean": "~0.3.1",
+    "gulp-concat": "~2.4.1",
+    "gulp-ignore": "~1.2.1",
+    "gulp-jshint": "~1.9.0",
+    "gulp-rename": "~1.2.0",
+    "gulp-rimraf": "~0.1.1",
+    "gulp-sass": "~1.1.0",
+    "gulp-uglify": "~1.0.1",
+  }
 }
