--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "shri",
   "version": "0.0.0",
+  "dependencies": {
+    "backbone": "~1.1.2",
+    "jquery": "~2.1.1"
+  },
   "devDependencies": {
     "gulp": "~3.8.10",
     "gulp-autoprefixer": "~1.0.1",
@@ -8,6 +12,8 @@
     "gulp-rename": "~1.2.0",
     "gulp-sass": "~1.1.0",
     "gulp-uglify": "~1.0.1",
-    "gulp-connect": "~2.2.0"
+    "gulp-connect": "~2.2.0",
+    "gulp-minify-css": "~0.3.11",
+    "hbsify": "~1.0.1"
   }
 }
