--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-ignore": "~1.2.1",
     "gulp-jshint": "~1.9.0",
     "gulp-livereload": "^2.1.1",
+    "gulp-plumber": "^0.6.6",
     "gulp-rename": "~1.2.0",
     "gulp-rimraf": "~0.1.1",
     "gulp-sass": "~1.1.0",
