--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "gulp-uglify": "~1.0.1",
     "gulp-connect": "~2.2.0",
     "gulp-minify-css": "~0.3.11",
-    "hbsify": "~1.0.1"
+    "hbsfy": "~2.2.0"
   }
 }
