--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "shri",
   "version": "0.0.0",
+  "dependencies": {
+    "backbone": "~1.1.2",
+    "handlebars": "~2.0.0"
+  },
   "devDependencies": {
     "gulp": "~3.8.10",
     "gulp-autoprefixer": "~1.0.1",
@@ -10,9 +14,7 @@
     "gulp-uglify": "~1.0.1",
     "gulp-connect": "~2.2.0",
     "gulp-minify-css": "~0.3.11",
-    "backbone": "~1.1.2",
     "hbsfy": "~2.2.0",
-    "handlebars": "~2.0.0",
     "datef": "0.0.5"
   }
 }
