--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-minify-css": "~0.3.11",
     "hbsfy": "~2.2.0",
     "handlebars": "~2.0.0",
-    "datef": "0.0.5"
+    "datef": "0.0.5",
+    "d3-browserify": "3.4.12"
   }
 }
