--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
     "backbone": "~1.1.2",
     "handlebars": "~2.0.0",
     "d3-browserify": "3.4.12",
-    "datef": "0.0.5"
-  },
-  "devDependencies": {
+    "datef": "0.0.5",
+    "express": "~4.10.4",
     "gulp": "~3.8.10",
     "gulp-autoprefixer": "~1.0.1",
     "gulp-browserify": "~0.5.0",
@@ -17,5 +16,8 @@
     "gulp-connect": "~2.2.0",
     "gulp-minify-css": "~0.3.11",
     "hbsfy": "~2.2.0"
+  },
+  "scripts": {
+    "postinstall": "gulp build --prod"
   }
 }
