--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-minify-css": "~0.3.11",
     "hbsfy": "~2.2.0"
   },
+  "main": "src/server.js",
   "scripts": {
     "postinstall": "gulp build --prod"
   }
